<resources>
    <string name="app_name">lab4</string>
    <string name="name" />
    <string name="email" />
    <string name="password" />
    <string name="reenterpassword">Reenterpassoword</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="password1">Password</string>
    <string name="reenterpassword2">Reenterpassword</string>
    <string name="btn1">Submit</string>
    <string name="btn2">CANCEL</string>
</resources>